initial checkin for structures